apps/ntfy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ntfy
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: ntfy
    app.kubernetes.io/part-of: ntfy
spec:
  type: ClusterIP
  clusterIP: 10.43.100.11
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app.kubernetes.io/name: ntfy
