apps/ntfy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ntfy
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: ntfy
    app.kubernetes.io/part-of: ntfy
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: ntfy.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ntfy
                port:
                  number: 80
    - host: ntfy.pj-home-lab.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ntfy
                port:
                  number: 80
